--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:postgresql://localhost/course
-spring.datasource.username =
-spring.datasource.password =
+spring.datasource.username = ${DATABASE_USERNAME}
+spring.datasource.password = ${DATABASE_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.liquibase.change-log = classpath:/db.changelog/master.xml
